# rust-ddd-cqrs-example

./: .gitignore  Cargo.toml  env.nu  postgre_start.nu  postgre_stop.nu  readme.md
application/common/: Cargo.toml  readme.md
application/common/examples/: serialize_json.rs
application/common/src/: commands.rs  error.rs  lib.rs  query_statement.rs
application/common/src/commands/: atm_commands.rs  bank_account_commands.rs
application/frontend/: Cargo.toml  readme.md
application/frontend/examples/: custom_query.rs  tutorial.rs
application/frontend/src/: api_handler.rs  lib.rs  queries.rs  utils.rs
application/frontend/src/api_handler/: inner.rs
application/frontend/src/queries/: atm_queries.rs  bank_account_queries.rs
application/serverside/: Cargo.toml  readme.md
application/serverside/examples/: test_api.rs
application/serverside/src/: api_handlers.rs  command_handlers.rs  event_handlers.rs  lib.rs  query_handlers.rs
application/serverside/src/command_handlers/: atm_command_handler.rs  atm_command_handlers.rs  bank_account_command_handlers.rs
application/serverside/src/event_handlers/: bank_account_event_handlers.rs
config/src/: lib.rs
ddd_cqrs_core/: Cargo.toml  readme.md
ddd_cqrs_core/src/: aggregate.rs  command.rs  event.rs  id.rs  lib.rs
domain/: Cargo.toml  readme.md
domain/src/: aggregates.rs  commands.rs  error.rs  events.rs  global.rs  id.rs  lib.rs  macros.rs  repositories.rs
domain/src/aggregates/: atm.rs  bank_account.rs
domain/src/aggregates/atm/: atm_location.rs
domain/src/aggregates/bank_account/: email_address.rs  name.rs
domain/src/commands/: bank_account_commands.rs
domain/src/events/: atm_events.rs  bank_account_events.rs
event_bus/: Cargo.toml  readme.md
event_bus/event_bus_macro/: Cargo.toml
event_bus/event_bus_macro/src/: lib.rs
event_bus/examples/: simple_use.rs
event_bus/src/: bus.rs  event.rs  lib.rs  subscribe.rs
event_bus/tests/: single_event.rs
infrastructure/: Cargo.toml  readme.md
infrastructure/src/: atm_repository_impl.rs  atm_repository_impls.rs  bank_account_repository_impl.rs  bank_account_repository_impls.rs  error.rs  lib.rs  transaction.rs  transactions.rs
infrastructure/src/atm_repository_impls/: db_atm_repository.rs  mock_atm_repository.rs
infrastructure/src/bank_account_repository_impls/: db_bank_account_repository.rs  mock_bank_account_repository.rs
infrastructure/src/transactions/: db_transaction.rs  mock_transaction.rs
log/: log.txt
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs
