[package]
name = "cqrs_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "domain",
    "event_bus", 
    "ddd_cqrs_core",
    "config", 
    "migration", 
    "infrastructure",
    "application/serverside",
    "application/common"
]
