[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
server = ["dep:async-trait"]

[dependencies]
serde = { version = "^1.0", features = ["derive"]}
uuid = { version = "^1.4", features = ["v4", "js"]}
thiserror = "^1.0"
email_address = "0.2.4"

# 以下はオプション
async-trait = { version = "^0.1", optional = true}