[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# server = ["dep:async-trait", "dep:sea-orm", "dep:sea-query", "dep:event_bus"]
server = ["dep:async-trait", "orm", "dep:event_bus"]
orm = ["dep:sea-orm", "dep:sea-orm-newtype"]

[dependencies]
ddd_cqrs_core = { path = "../ddd_cqrs_core" }
config = { path = "../config" }
serde = { version = "^1.0", features = ["derive"]}
uuid = { version = "^1.4", features = ["v4", "js"]}
thiserror = "^1.0"
email_address = "0.2.4"

# 以下はオプション
async-trait = { version = "^0.1", optional = true}
sea-orm = { version = "0.12.1", optional = true, default-features = false, features = ["with-uuid", "macros"]}
sea-orm-newtype = { version = "0.0.1", optional = true }
event_bus = { path = "../event_bus", optional = true}

[dev-dependencies]
serde_json = "^1.0"