[package]
name = "event_bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1"
async-global-executor = { version = "^2.3", features = ["tokio"]}
tracing = "^0.1"

[dev-dependencies]
# tokio = { version = "1.29.1", features = ["rt"]}