[package]
name = "event_bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event_bus_macro = { path = "event_bus_macro"}
async-trait = "^0.1"
async-global-executor = { version = "^2.3", features = ["tokio"]}

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"]}
futures = "0.3.28"