[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = ["dep:infrastructure", "dep:axum"]
frontend = ["dep:reqwest"]
default = []

[dependencies]
domain = { path = "../../domain", features = ["orm"]}
thiserror = "^1.0"
serde = { version = "^1.0", features = ["derive"]}
sea-orm = { version = "0.11.3", default-features = false, features = ["with-uuid", "macros"]}


# 以下はoptional
infrastructure = { path = "../../infrastructure", optional = true }
axum = { version = "^0.6", optional = true}
reqwest = { version = "^0.11", optional = true }