[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", features = ["frontend"]}
domain = { path = "../../domain", features = ["orm"]}
config = { path = "../../config"}
reqwest = { version = "^0.11", features = ["json"] }
serde = "^1.0"