[package]
name = "serverside"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddd_cqrs_core = { path = "../../ddd_cqrs_core"}
common = { path = "../common", features = ["server"]}
domain = { path = "../../domain", features = ["server"]}
infrastructure = { path = "../../infrastructure" }
async-trait = "^0.1"
event_bus = { path = "../../event_bus"}
sea-orm = { version = "0.12.1", features = ["with-uuid", "runtime-tokio-rustls","sqlx-postgres"]}
lru = "^0.11"
axum = "^0.6"
serde = "^1.0"
derive-new = "^0.5"
tracing = "^0.1"
tracing-subscriber = "^0.3"

[dev-dependencies]
infrastructure = { path = "../../infrastructure", features = ["mock"]}
tokio = { version = "1.28.0", features = ["rt", "macros"]}
tower-http = { version = "0.4.0", features = ["cors"]}
tower = { version = "^0.4", features = ["full"]}
config = { path = "../../config" }
migration = { path = "../../migration" }